# gravity-software-manager-plugin

./: CMakeLists.txt  README.md  softwaremanagerconfig.h.in
cmake/modules/: FindZypp.cmake
share/: com.ispirata.Hemera.SoftwareManagement.RemoteUpdate.json
src/: CMakeLists.txt  applicationmanagerinterface.cpp  applicationmanagerinterface.h  com.ispirata.Hemera.SoftwareManager.Backend.xml  com.ispirata.Hemera.SoftwareManager.conf  imagestoreupdatesource.cpp  imagestoreupdatesource.h  incrementalupdateoperation.cpp  incrementalupdateoperation.h  progressinterface.cpp  progressinterface.h  recoveryupdateoperation.cpp  recoveryupdateoperation.h  remoteupdateinterface.cpp  remoteupdateinterface.h  softwaremanagerinterface.cpp  softwaremanagerinterface.h  softwaremanagerplugin.cpp  softwaremanagerplugin.h  updateoperation.cpp  updateoperation.h  updatesource.cpp  updatesource.h
workers/: CMakeLists.txt  com.ispirata.Hemera.SoftwareManager.Backend.conf  com.ispirata.Hemera.SoftwareManager.Backend.service  workersglobalhelpers.h
workers/zypp/: CMakeLists.txt  gravity-software-manager-zypp-worker.service.in  main.cpp  zyppbackend.cpp  zyppbackend.h  zyppworkercallbacks.cpp  zyppworkercallbacks.h
